fixed spacing

--- a/styles/home-main.css
+++ b/styles/home-main.css
@@ -329,7 +329,7 @@
         align-items: center;
         align-self: center;
         border: 3px solid rgb(127, 92, 152);
-        margin-top: -125px;
+        margin-top: -110px;
         margin-bottom: 20px;
     }
 
